Update tooltip text of nostr "link" in footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       <a href="https://x.com/decentmoney2009" target="_blank" rel="noopener">𝕏</a>
       <a id="nostrCopyLink"
          href="#"
-         title="Click or tap to copy"
+         title="Click/tap to copy npub"
          aria-label="npub10k0zrnsujm856xrvx7ftw2m66xsx39em620slh4eecympt5833pq97rf0x"
          data-npub="npub10k0zrnsujm856xrvx7ftw2m66xsx39em620slh4eecympt5833pq97rf0x">nostr</a>
     </div>
