Add mirror link to footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
          rel="nofollow">⚡ greyfox3@primal.net</a>
     </div>
     <div class="footer-links">
+      <a href="https://decent-money.github.io/" target="_blank" rel="noopener">Mirror</a>
       <a href="https://github.com/decent-money" target="_blank" rel="noopener">GitHub</a>
       <a href="https://x.com/decentmoney2009" target="_blank" rel="noopener">𝕏</a>
       <a id="nostrCopyLink"
