--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     <meta name="description" content="{{ site.description | escape }}">
     {% endif %}
 
+    <link rel="icon" href="{{ '/favicon.png' | relative_url }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   </head>
   <body>
