--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
     {% assign _page_description = page.description | default: site.description | escape %}
     {% assign _page_url = page.url | absolute_url %}
     {% assign _image = page.og_image | default: page.social_image | default: site.og_image | default: site.logo | default: '/dm2k9_logo.png' | relative_url | absolute_url %}
+    {% assign _image_width = page.social_image_width | default: site.social_image_width | default: 1200 %}
+    {% assign _image_height = page.social_image_height | default: site.social_image_height | default: 630 %}
     {% assign _site_name = site.title | escape %}
 
     {% if page.url == "/" %}
@@ -27,6 +29,10 @@
     <meta property="og:url" content="{{ _page_url }}">
     <meta property="og:site_name" content="{{ _site_name }}">
     <meta property="og:image" content="{{ _image }}">
+    <meta property="og:image:secure_url" content="{{ _image }}">
+    <meta property="og:image:width" content="{{ _image_width }}">
+    <meta property="og:image:height" content="{{ _image_height }}">
+    <meta property="og:image:type" content="image/png">
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
     {% endif %}
