--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% assign _image = page.og_image | default: page.social_image | default: site.og_image | default: site.logo | default: '/dm2k9_logo.png' | relative_url | absolute_url %}
     {% assign _image_width = page.social_image_width | default: site.social_image_width | default: 1200 %}
     {% assign _image_height = page.social_image_height | default: site.social_image_height | default: 630 %}
+    {% assign _image_alt = page.image_alt | default: page.social_image_alt | default: site.image_alt | default: _page_title %}
     {% assign _site_name = site.title | escape %}
 
     {% if page.url == "/" %}
@@ -33,6 +34,7 @@
     <meta property="og:image:width" content="{{ _image_width }}">
     <meta property="og:image:height" content="{{ _image_height }}">
     <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="{{ _image_alt }}">
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
     {% endif %}
@@ -42,6 +44,7 @@
     <meta name="twitter:title" content="{{ _page_title }}">
     <meta name="twitter:description" content="{{ _page_description }}">
     <meta name="twitter:image" content="{{ _image }}">
+    <meta name="twitter:image:alt" content="{{ _image_alt }}">
     {% if site.twitter_username %}
     <meta name="twitter:site" content="@{{ site.twitter_username | replace: '@', '' }}">
     {% endif %}
